Nettoyage + UI Tab Général

--- a/config.yml
+++ b/config.yml
@@ -1,2 +1,8 @@
-pluginsToLoad:
-    - Autoloot
+activePluginPack: PoE
+pluginConfig:
+  Autoloot:
+    hotkey: K+maj
+pluginPacks:
+  PoE:
+  - Autoloot
+  - Bulk Identifier
